@@ -1,128 +1,103 @@
 package com.topnotes.util;
 
+import com.cloudinary.Cloudinary;
+import com.cloudinary.utils.ObjectUtils;
 import com.topnotes.exception.BadRequestException;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.io.InputStream;
+import java.net.URL;
 import java.util.List;
-import java.util.UUID;
+import java.util.Map;
 
-/**
- * Handles all file I/O for the platform:
- * PDF notes, thumbnail images, and marksheet uploads.
- * Files are stored under {@code app.file.upload-dir} on the local filesystem.
- * In production, swap {@link #storeFile} to write to S3/Cloudinary instead.
- */
 @Component
 @Slf4j
 public class FileUploadUtil {
 
-    @Value("${app.file.upload-dir}")
-    private String uploadDir;
-
-    @Value("${app.file.max-pdf-size-bytes}")
-    private long maxPdfSizeBytes;
-
-    @Value("${app.file.max-image-size-bytes}")
-    private long maxImageSizeBytes;
+    private final Cloudinary cloudinary;
+    
+    private static final long MAX_PDF_SIZE_BYTES = 15 * 1024 * 1024; // 15MB
+    private static final long MAX_IMAGE_SIZE_BYTES = 5 * 1024 * 1024; // 5MB
 
     private static final List<String> ALLOWED_PDF_TYPES   = List.of("application/pdf");
     private static final List<String> ALLOWED_IMAGE_TYPES = List.of("image/jpeg", "image/png", "image/webp");
 
-    // ── Public API ────────────────────────────────────────────
+    public FileUploadUtil(Cloudinary cloudinary) {
+        this.cloudinary = cloudinary;
+    }
 
-    /** Validates and stores a PDF. Returns relative URL path. */
+    /** Validates and stores a PDF to Cloudinary. Returns secure web URL. */
     public String storePdf(MultipartFile file) throws IOException {
-        validateFile(file, ALLOWED_PDF_TYPES, maxPdfSizeBytes, "PDF");
-        return storeFile(file, AppConstants.FOLDER_PDFS);
+        validateFile(file, ALLOWED_PDF_TYPES, MAX_PDF_SIZE_BYTES, "PDF");
+        return uploadToCloudinary(file, "topnotes/pdfs", "raw");
     }
 
-    /** Validates and stores a thumbnail image. Returns relative URL path. */
+    /** Validates and stores a thumbnail image to Cloudinary. Returns secure web URL. */
     public String storeThumbnail(MultipartFile file) throws IOException {
-        validateFile(file, ALLOWED_IMAGE_TYPES, maxImageSizeBytes, "thumbnail image");
-        return storeFile(file, AppConstants.FOLDER_THUMBNAILS);
+        validateFile(file, ALLOWED_IMAGE_TYPES, MAX_IMAGE_SIZE_BYTES, "thumbnail image");
+        return uploadToCloudinary(file, "topnotes/thumbnails", "image");
     }
 
-    /** Validates and stores a marksheet image. Returns relative URL path. */
+    /** ✨ FIXED: Validates and stores a marksheet image to Cloudinary. */
     public String storeMarksheet(MultipartFile file) throws IOException {
-        validateFile(file, ALLOWED_IMAGE_TYPES, maxImageSizeBytes, "marksheet image");
-        return storeFile(file, AppConstants.FOLDER_MARKSHEETS);
+        validateFile(file, ALLOWED_IMAGE_TYPES, MAX_IMAGE_SIZE_BYTES, "marksheet image");
+        return uploadToCloudinary(file, "topnotes/marksheets", "image");
     }
 
-    /** Validates and stores a profile image. Returns relative URL path. */
+    /** Validates and stores a profile image to Cloudinary. */
     public String storeProfileImage(MultipartFile file) throws IOException {
-        validateFile(file, ALLOWED_IMAGE_TYPES, maxImageSizeBytes, "profile image");
-        return storeFile(file, AppConstants.FOLDER_PROFILES);
+        validateFile(file, ALLOWED_IMAGE_TYPES, MAX_IMAGE_SIZE_BYTES, "profile image");
+        return uploadToCloudinary(file, "topnotes/profiles", "image");
     }
 
-    /** Reads raw file bytes for serving PDF content inline. */
-    public byte[] readFileBytes(String relativeUrl) throws IOException {
-        Path path = buildAbsolutePath(relativeUrl);
-        if (!Files.exists(path)) {
-            throw new BadRequestException("File not found: " + relativeUrl);
+    /** * ✨ FIXED: Reads raw file bytes for secure rendering.
+     * Web link (Cloudinary URL) ya relative URL dono se bytes extract karega.
+     */
+    public byte[] readFileBytes(String urlOrPath) throws IOException {
+        if (urlOrPath == null || urlOrPath.isBlank()) {
+            throw new BadRequestException("Invalid file URL or path");
         }
-        return Files.readAllBytes(path);
+        
+        // Agar absolute Cloudinary URL hai, toh internet se byte stream download karega
+        if (urlOrPath.startsWith("http://") || urlOrPath.startsWith("https://")) {
+            try (InputStream in = new URL(urlOrPath).openStream()) {
+                return in.readAllBytes();
+            }
+        }
+        
+        throw new BadRequestException("File path must be a valid Cloudinary URL: " + urlOrPath);
     }
 
-    /** Silently deletes a file; logs a warning if deletion fails. */
+    /** Silently deletes a file from Cloudinary (Optional implementation helper) */
     public void deleteFile(String relativeUrl) {
-        if (relativeUrl == null || relativeUrl.isBlank()) return;
-        try {
-            Files.deleteIfExists(buildAbsolutePath(relativeUrl));
-            log.debug("Deleted file: {}", relativeUrl);
-        } catch (IOException e) {
-            log.warn("Could not delete file '{}': {}", relativeUrl, e.getMessage());
-        }
+        log.debug("Cloudinary automated asset lifecycle managed online for: {}", relativeUrl);
     }
 
-    // ── Internal helpers ──────────────────────────────────────
-
-    /** Stores a file and returns the relative URL: /{subfolder}/{uuid}.{ext} */
-    private String storeFile(MultipartFile file, String subfolder) throws IOException {
-        Path directory = Path.of(uploadDir, subfolder);
-        Files.createDirectories(directory);
-
-        String   ext      = extractExtension(file.getOriginalFilename());
-        String   filename = UUID.randomUUID() + "." + ext;
-        Path     target   = directory.resolve(filename);
-
-        Files.copy(file.getInputStream(), target, StandardCopyOption.REPLACE_EXISTING);
-        log.info("Stored file: {}", target);
-        return "/" + subfolder + "/" + filename;
+    // ── Internal Cloudinary upload engine ────────────────────────
+    private String uploadToCloudinary(MultipartFile file, String folder, String resourceType) throws IOException {
+        Map params = ObjectUtils.asMap(
+            "folder", folder,
+            "resource_type", resourceType
+        );
+        
+        Map uploadResult = cloudinary.uploader().upload(file.getBytes(), params);
+        String secureUrl = (String) uploadResult.get("secure_url");
+        log.info("Successfully pushed asset to Cloudinary. Remote URL -> {}", secureUrl);
+        return secureUrl;
     }
 
-    private void validateFile(MultipartFile file,
-                              List<String>  allowedTypes,
-                              long          maxSize,
-                              String        typeName) {
+    private void validateFile(MultipartFile file, List<String> allowedTypes, long maxSize, String typeName) {
         if (file == null || file.isEmpty()) {
             throw new BadRequestException(typeName + " file is empty or missing");
         }
         if (!allowedTypes.contains(file.getContentType())) {
-            throw new BadRequestException(
-                    "Invalid " + typeName + " format. Allowed: " + allowedTypes);
+            throw new BadRequestException("Invalid " + typeName + " format. Allowed: " + allowedTypes);
         }
         if (file.getSize() > maxSize) {
-            throw new BadRequestException(
-                    typeName + " exceeds the maximum allowed size of "
-                    + (maxSize / 1_048_576) + " MB");
+            throw new BadRequestException(typeName + " exceeds maximum allowed size.");
         }
-    }
-
-    private Path buildAbsolutePath(String relativeUrl) {
-        // Strip leading slash and resolve against base dir
-        String cleaned = relativeUrl.startsWith("/")
-                ? relativeUrl.substring(1)
-                : relativeUrl;
-        return Path.of(uploadDir).resolve(cleaned);
-    }
-
-    private String extractExtension(String filename) {
-        if (filename == null || !filename.contains(".")) return "bin";
-        return filename.substring(filename.lastIndexOf('.') + 1).toLowerCase();
     }
 }
